# installer

./: COPYING  README.md  meson.build  org.ultramarine.installer.json
data/: meson.build  org.ultramarine.installer.appdata.xml.in  org.ultramarine.installer.desktop.in  org.ultramarine.installer.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  ultramarine-installer.in  ultramarine_installer.gresource.xml  window.blp  window.py  window.ui
